--- a/app/src/main/res/layout/row_messages.xml
+++ b/app/src/main/res/layout/row_messages.xml
@@ -48,6 +48,12 @@
                     android:layout_height="wrap_content"
                     tools:text="content"/>
 
+                <com.github.curioustechizen.ago.RelativeTimeTextView
+                    android:id="@+id/timestamp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                     />
+
             </LinearLayout>
 
         </LinearLayout>
