--- a/app/src/main/res/layout/activity_namepicker.xml
+++ b/app/src/main/res/layout/activity_namepicker.xml
@@ -42,7 +42,7 @@
             android:layout_gravity="right"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/ic_send_black_24dp"
-            android:text="Continuer"
+            android:text="@string/boutton_continuer"
             android:textColor="@android:color/white"/>
 
     </LinearLayout>
