--- a/app/src/main/res/layout/row_receved_messages.xml
+++ b/app/src/main/res/layout/row_receved_messages.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="16dp"
@@ -9,12 +10,12 @@
              android:paddingTop="4dp"
              android:clipToPadding="false">
 
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        card_view:cardBackgroundColor="?android:attr/colorActivatedHighlight"
         card_view:cardCornerRadius="4dp"
         card_view:contentPadding="12dp">
 
@@ -29,7 +30,7 @@
                 android:layout_height="32dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginRight="12dp"
-                android:background="@color/cardview_light_background"/>
+                android:background="@color/cardview_light_background" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -40,19 +41,18 @@
                     android:id="@+id/userTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="user"/>
+                    tools:text="user" />
 
                 <TextView
                     android:id="@+id/contentTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="content"/>
+                    tools:text="content" />
 
                 <com.github.curioustechizen.ago.RelativeTimeTextView
                     android:id="@+id/timestamp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                     />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
